package src;

public class Empleado {
    
}
